@@ -1,0 +1,44 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<InventoryUpdateResponse>
+    <Status>Test</Status>
+    <Product code="BlackDog"
+         quantity="926"
+         pending="0"
+         good="793"
+         backordered="480"
+         reserved="573"
+         shipping="155"
+         shipped="620"
+         consuming="503"
+         creating="588"
+         consumed="677"
+         created="914"
+    />
+    <Product code="MoustacheCat"
+         quantity="-1"
+         pending="806"
+         good="368"
+         backordered="640"
+         reserved="520"
+         shipping="420"
+         shipped="658"
+         consuming="672"
+         creating="677"
+         consumed="254"
+         created="901"
+    />
+    <Product code="KingMonkey"
+         quantity="677"
+         pending="244"
+         good="336"
+         backordered="462"
+         reserved="202"
+         shipping="860"
+         shipped="956"
+         consuming="521"
+         creating="598"
+         consumed="387"
+         created="543"
+    />
+    <TotalProducts>3</TotalProducts>
+</InventoryUpdateResponse>
